# cgas

./: Dockerfile  main.py  pyproject.toml  requirements.txt
cloudygram_api_server/controllers/: home_controller.py  messages_controller.py  user_controller.py
cloudygram_api_server/models/: messages_model.py
cloudygram_api_server/telethon/: telethon_wrapper.py
