[tool.poetry]
name = "cgas"
version = "0.1.2"
description = "HTTP API serving telethon features"
authors = ["Roberto Montalti <roberto.montalti00@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
cloudgram-telethon = "^1.24"
fastapi = "^0.77.0"
markdown-it-py = "0.1"
python-multipart = "0.0.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
